--- a/sass/main.scss
+++ b/sass/main.scss
@@ -165,6 +165,7 @@ body{
     margin-top: -90px;
     img{
       display: block;
+      width: 100%;
     }
   }
 }
@@ -243,11 +244,25 @@ body{
       max-width: 945px;
       height: 240px;
       margin: 0 auto;
+      position: relative;
       .item{
+
         img{
           width: 100%;
-          min-height: 243px;
+          min-height: 240px;
           display: block;
+        }
+        .slide_button{
+          position: absolute;
+          background: transparent;
+          border-radius: 0;
+          border: 2px solid white;
+          z-index: 2;
+          top: 90px;
+          right: 50%;
+          transform: translateX(50%);
+          letter-spacing: 3px;
+          padding: 13px 37px;
         }
       }
     }
@@ -565,3 +580,152 @@ body{
   }
 
 }
+
+
+
+
+@media (max-width: 1200px) {
+  .section_second{
+    text-align: center;
+    &__text{
+      p{
+        max-width: 650px;
+        margin: 0 auto;
+      }
+
+    }
+    &__img{
+      margin-top: 0;
+      img{
+        display: block;
+        width: 50%;
+        margin: 40px auto 0;
+      }
+    }
+  }
+  .section_third{
+    text-align: center;
+    h5{
+      padding-top: 50px;
+    }
+    p{
+      max-width: 650px;
+      margin: 0 auto;
+    }
+    .circle{
+      display: none;
+    }
+  }
+  .section_fourth{
+    &__text{
+      .slider_text{
+        p{
+          max-width: 650px;
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+  .section_fifth{
+    text-align: center;
+    &__text{
+      padding-bottom: 50px;
+      padding-top: 50px;
+      p{
+        max-width: 650px;
+        margin: 0 auto;
+      }
+    }
+  }
+  .section_sixth{
+    background: #e9edf1;
+    text-align: center;
+    &__text{
+      p{
+        max-width: 650px;
+        margin: 0 auto;
+      }
+    }
+  }
+  .section_seventh{
+    &__img{
+      img{
+        width: 100%;
+      }
+    }
+    &__text{
+      max-width: 505px;
+      padding-left: 0;
+    }
+  }
+  .section_eighth{
+
+    &__img{
+      display: none;
+    }
+    &__text{
+
+      &:before{
+        content: none;
+      }
+    }
+  }
+  .section_ninth{
+    &__text{
+      padding-bottom: 30%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .section_seventh{
+    background: #835fa7;
+    &__text{
+      text-align: center;
+      margin: 0 auto;
+      padding-bottom: 50px;
+      max-width: 650px;
+      p{
+        text-align: center;
+
+      }
+      .text__img{
+        text-align: center;
+        max-width: 235px;
+        margin: 0 auto;
+      }
+    }
+
+    &__img{
+      display: none;
+    }
+  }
+
+  .section_eighth{
+    text-align: center;
+    margin:  0 auto;
+    &__text{
+      h5{
+        margin: 0 auto;
+      }
+      p{
+        margin: 0 auto;
+        max-width: 650px;
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .section_ninth{
+    background: #835fa7;
+    &__text{
+      max-width: 650px;
+      padding-bottom: 0;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+  }
+}
+
