--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,20 +9,6 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.container_max{
-  max-width: 1180px;
-  margin: 0 auto;
-}
-
-
-button{
-  background: #3dd2ae;
-  border-radius: 28px;
-  padding: 13px 53px;
-  outline: none;
-  border: none;
-}
-
 h2, h3, h4, h5, p{
   margin: 0;
 }
@@ -32,26 +18,36 @@ body{
 }
 
 
+.container_max{
+  max-width: 1180px;
+  margin: 0 auto;
+}
 
 
 
 .section_first{
   background: url("../img/header_bc.png") no-repeat center;
   background-size: cover;
+
    nav{
      padding-top: 48px;
      padding-left: 69px;
      padding-right: 43px;
      display: flex;
      justify-content: space-between;
+
      .logo{
+
        .logo_img{
          fill: #835fa7
        }
+
      }
+
      .nav_buttons{
        display: flex;
        padding-top: 10px;
+
        .input-group{
          margin-right: 16px;
 
@@ -62,6 +58,7 @@ body{
            border: none;
            padding: 24px 19px;
          }
+
          button{
            background:#343b48 ;
            border: none;
@@ -73,11 +70,15 @@ body{
              color: white;
              font-size: 17px;
            }
+
          }
+
          .btn{
            outline: none;
          }
+
        }
+
      }
 
      .buy{
@@ -88,50 +89,72 @@ body{
        max-height: 48px;
        color: white;
        margin-right: 20px;
+       border:none;
+       transition: .3s;
+
+       &:hover{
+         box-shadow: 0 15px 20px rgba(131,95,167,.4);
+         transform: translateY(-7px);
+       }
+
      }
+
      .btn-group{
 
        .dropdown-toggle{
          background: transparent;
          border: none;
+
          i{
            color: white;
            font-size: 24px;
          }
+
        }
+
        .dropdown-menu{
          background: #3a4d60;
          left: -138px;
+
          li{
            padding: 10px 0;
+
            a{
              color: white;
+
              &:hover{
                color: #835fa7;
                background: #3a4d60;
              }
+
            }
+
          }
 
-
        }
+
      }
+
      .open>.dropdown-toggle.btn-default {
        color: #333;
        background-color:  #343b48;
        border-color:  #343b48;
      }
+
    }
+
   .header__text{
     padding-top: 231px;
     padding-bottom: 236px;
     color: #ffffff;
+
     h3{
       font-size: 70px;
       line-height: 90px;
       font-weight: 300;
       max-width: 620px;
     }
+
     p{
       font-size: 18px;
       font-weight: 400;
@@ -139,36 +162,58 @@ body{
       max-width: 545px;
       padding-top: 25px; ;
     }
+
   }
 
 }
+
+
+
 .section_second{
   background: #835fa7;
+
   &__text{
     padding-top: 79px;
     color: white;
+
     h4{
-      font-size: 40px;
-      font-weight: 300;
       line-height: 90px;
+      @include h4;
     }
+
     p{
-      font-size: 16px;
-      font-weight: 400;
+      @include p;
       line-height: 26px;
       padding-bottom: 32px;
       max-width: 465px;
     }
+
+    button{
+      @include button;
+
+      &:hover{
+        background:  #3dd2ae;
+        box-shadow: 0 15px 20px rgba(46,229,158,.4);
+        transform: translateY(-7px);
+      }
+
+    }
+
   }
 
   &__img{
     margin-top: -90px;
+
     img{
       display: block;
       width: 100%;
     }
+
   }
+
 }
+
+
 
 .section_third{
   position: relative;
@@ -177,18 +222,21 @@ body{
   padding-top: 68px;
   padding-bottom: 107px;
   &__text{
+
     h5{
       font-size: 30px;
       font-weight: 300;
       line-height: 55px;
       padding-bottom: 16px;
     }
+
     p{
       color:  #696f7c;
       font-size: 20px;
       font-weight: 300;
       line-height: 30px;
       padding-bottom: 36px;
+
       &:nth-child(3){
         color:  #44474f;
         font-size: 14px;
@@ -200,45 +248,55 @@ body{
     }
     button{
       color: white;
+      @include button;
+
+      &:hover {
+        background:  #3dd2ae;
+        box-shadow: 0 15px 20px rgba(46,229,158,.4);
+        transform: translateY(-7px);
+      }
+
     }
 
   }
-.circle{
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background: #f3f7fb;
-  border-radius: 50px;
-  left: 47%;
-  transform: translateX(47%);
-  bottom: -23px;
-}
 
+  .circle{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background: #f3f7fb;
+    border-radius: 50px;
+    left: 47%;
+    transform: translateX(47%);
+    bottom: -23px;
+  }
 
 }
 
 .section_fourth{
   background: #232831;
+
   &__text{
     color:  #ffffff;
     padding-top: 93px;
+
     .slider_text{
       padding-bottom: 84px;
+
       h4{
-        font-size: 40px;
-        font-weight: 300;
+      @include h4;
         line-height: 55px;
         padding-bottom: 28px;
       }
 
       p{
+        @include p;
         color:  #9da5b0;
-        font-size: 16px;
-        font-weight: 400;
         line-height: 30px;
         padding-bottom: 47px;
         max-width: 1093px;
       }
+
     }
     .slide{
       max-width: 945px;
@@ -252,6 +310,7 @@ body{
           min-height: 240px;
           display: block;
         }
+
         .slide_button{
           position: absolute;
           background: transparent;
@@ -264,9 +323,10 @@ body{
           letter-spacing: 3px;
           padding: 13px 37px;
         }
-      }
-    }
 
+      }
+
+    }
 
     .carousel-indicators{
       left: 0;
@@ -280,10 +340,12 @@ body{
       border-top-left-radius: 9px;
       border-top-right-radius: 9px;
       padding-top: 10px;
+
       li{
         background: #434955;
         border: #434955;
       }
+
       .active{
         background: #835fa7;
         border: #835fa7;
@@ -292,15 +354,18 @@ body{
     }
 
   }
+
 }
 
 
 .section_fifth{
   background: #2b2f3b;
+
   &__text{
     color:  #ffffff;
     padding-top: 89px;
     padding-bottom: 146px;
+
     .img_container{
       padding-bottom: 21px;
     }
@@ -318,6 +383,7 @@ body{
       font-weight: 400;
       line-height: 26px;
     }
+
     span{
       color:  #3a4d60;
       font-size: 20px;
@@ -335,17 +401,21 @@ body{
   .col-lg-6{
     padding-right: 0;
   }
+
   &__text{
     padding: 94px 0 138px 0;
+
     h5{
-      font-size: 40px;
-      font-weight: 300;
+     @include h4;
       padding-bottom: 35px;
+
       span{
         color: #835fa7;
         margin-right: 10px;
       }
+
     }
+
     p{
       color:  #696f7c;
       font-size: 20px;
@@ -353,6 +423,7 @@ body{
       line-height: 30px;
       padding-bottom: 29px;
       max-width: 440px;
+
       &:nth-child(3){
         color:  #44474f;
         font-size: 14px;
@@ -364,13 +435,14 @@ body{
 
     }
 
-
   }
   &__img{
+
     img{
       width: 100%;
       display: block;
     }
+
   }
 
 }
@@ -382,10 +454,10 @@ body{
   .col-lg-6{
     padding-right: 0;
   }
+
   &__text {
     padding-top: 69px;
     padding-left: 55px;
-
 
     p {
       color:  #ffffff;
@@ -394,47 +466,62 @@ body{
       line-height: 44px;
       text-align: left;
       font-weight: 100;
+
       &:first-child{
         font-size: 12px;
         line-height: 20px;
       }
 
     }
+
     .text__img{
       display: flex;
       padding-top: 34px;
+
       p{
         font-size: 15px;
         font-style: normal;
         padding-left: 18px;
       }
+
     }
+
   }
   &__img{
     background: #835fa7;
+
     img{
       width: 99.99%;
       display: block;
     }
+
   }
 
 }
 .section_eighth{
+
   .row{
+
     .col-lg-6{
+
       &:first-child{
         padding-right: 0;
       }
+
       &:last-child{
         padding-left: 0;
       }
+
     }
+
   }
+
   &__text{
     width: 100%;
     padding-left: 27px;
     background: white;
     position: relative;
+
     h5{
       font-size: 23px;
       line-height: 28px;
@@ -444,6 +531,7 @@ body{
       padding-top: 33px;
       max-width: 474px;
     }
+
     p{
       font-size: 14px;
       line-height: 25px;
@@ -453,17 +541,21 @@ body{
       max-width: 474px;
       padding-bottom: 65px;
       position: relative;
+
       &:last-child{
         padding-bottom: 23px;
         padding-top: 0;
         font-size: 12px
       }
+
     }
+
     span{
       font-size: 30px;
       padding-right: 31px;
       position: relative;
       bottom: -5px;
+
       &:before{
         content: '';
         position: absolute;
@@ -475,7 +567,9 @@ body{
         background: #ebebe5;
         transform: rotate(90deg)
       }
+
     }
+
     &:before{
       content: '';
       position: absolute;
@@ -485,12 +579,16 @@ body{
       border: 13px solid transparent;
       border-left: 10px solid white;
     }
+
   }
+
   &__img{
+
     img{
       width: 100%;
       display: block;
     }
+
   }
 
 }
@@ -504,23 +602,29 @@ body{
     padding-left: 16px;
     padding-bottom: 55%;
     max-width: 380px;
+
     p{
       color:  #ffffff;
       font-size: 32px;
       font-style: italic;
       line-height: 44px;
     }
+
     .text__img{
       display: flex;
       padding-top: 34px;
       padding-bottom: 88px;
+
       p{
         font-size: 15px;
         font-style: normal;
         padding-left: 18px;
       }
+
     }
+
   }
+
 }
 
 
@@ -528,6 +632,7 @@ body{
   background: #192123;
   padding-top: 95px;
   padding-bottom: 145px;
+
   p{
     color:  #f6f7fa;
     font-size: 13px;
@@ -541,10 +646,12 @@ body{
     padding-left: 0;
     color:#f6f7fa ;
     font-weight: 600;
+
     li{
       list-style: none;
       padding-top: 4px;
       font-weight: 400;
+
       &:first-child{
         padding-top: 17px;
       }
@@ -552,29 +659,35 @@ body{
     }
 
   }
+
   .section_tenth__text_input{
+
     .input-group{
       margin-top: 8px;
       margin-bottom: 9px;
+
       button{
         background: #835fa7;
         border-radius: 2px;
         padding: 10px 21px;
+
         i{
           color: white;
           font-size: 24px;
         }
+
       }
+
       input{
         border-radius: 2px;
         padding: 27px 12px;
       }
 
-
     }
+
     p{
       font-size: 12px;
-      //max-width: 350px;
+
     }
 
   }
@@ -808,8 +921,6 @@ body{
       h4{
         line-height: 46px;
         padding-bottom: 15px;
-
-        ;
       }
     }
   }
